Get rid of symfony 2.8, require at  least 3.0

--- a/composer.json
+++ b/composer.json
@@ -15,16 +15,16 @@
         "psr/log": "~1.0",
         "naucon/utility": "~1.0",
         "naucon/htmlbuilder": "~1.0",
-        "symfony/validator": "~2.8 || ^3.0",
-        "symfony/property-access": "~2.8 || ^3.0",
-        "symfony/security-csrf": "~2.8 || ^3.0",
-        "symfony/event-dispatcher": "~2.8 || ^3.0",
-        "symfony/finder": "~2.8 || ^3.0",
-        "symfony/options-resolver": "~2.3 || ^3.0"
+        "symfony/validator": "^3.0",
+        "symfony/property-access": "^3.0",
+        "symfony/security-csrf": "^3.0",
+        "symfony/event-dispatcher": "^3.0",
+        "symfony/finder": "^3.0",
+        "symfony/options-resolver": "^3.0"
     },
     "require-dev": {
-        "symfony/intl": "~2.8 || ^3.0",
-        "symfony/config": "~2.8 || ^3.0",
+        "symfony/intl": "^3.0",
+        "symfony/config": "^3.0",
         "doctrine/annotations": "~1.0",
         "doctrine/cache": "~1.0",
         "naucon/iban": "~1.0",
