--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         }
     ],
     "require": {
-        "php": ">=5.5.9",
+        "php": ">=5.6",
         "psr/log": "~1.0",
         "naucon/utility": "~1.0",
         "naucon/htmlbuilder": "~1.0",
@@ -28,7 +28,7 @@
         "doctrine/annotations": "~1.0",
         "doctrine/cache": "~1.0",
         "naucon/iban": "~1.0",
-        "phpunit/phpunit": "~4.8 || ^5.6"
+        "phpunit/phpunit": "^5.6"
     },
     "suggest": {
         "symfony/config": "Is required to use xml mapping.",
