--- a/composer.json
+++ b/composer.json
@@ -11,24 +11,26 @@
         }
     ],
     "require": {
-        "php": "^5.5.9|>=7.0.8",
+        "php": "^7.1",
         "psr/log": "~1.0",
         "doctrine/annotations": "^1.0",
         "doctrine/cache": "^1.0",
         "naucon/utility": "~1.0",
         "naucon/htmlbuilder": "~1.0",
-        "symfony/validator": "^3.0",
-        "symfony/property-access": "^3.0",
-        "symfony/security-csrf": "^3.0",
-        "symfony/event-dispatcher": "^3.0",
-        "symfony/finder": "^3.0",
-        "symfony/options-resolver": "^3.0"
+        "symfony/validator": "^3.2 || ^4.0",
+        "symfony/property-access": "^3.2 || ^4.0",
+        "symfony/security-csrf": "^3.2 || ^4.0",
+        "symfony/event-dispatcher": "^3.2 || ^4.0",
+        "symfony/finder": "^3.2 || ^4.0",
+        "symfony/options-resolver": "^3.2 || ^4.0",
+        "symfony/translation": "^3.2 || ^4.0",
+        "symfony/yaml": "^3.2 || ^4.0"
     },
     "require-dev": {
-        "symfony/intl": "^3.0",
-        "symfony/config": "^3.0",
+        "symfony/intl": "^3.2 || ^4.0",
+        "symfony/config": "^3.2 || ^4.0",
         "naucon/iban": "~1.0",
-        "phpunit/phpunit": "^5.6"
+        "phpunit/phpunit": "^7.0"
     },
     "suggest": {
         "symfony/config": "Is required to use xml mapping.",
