--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,7 @@ jobs:
       - name: PHPUnit Tests
         uses: php-actions/phpunit@v3
         with:
+          version: "composer"
           php_version: "7.4"
           configuration: phpunit.xml.dist
           bootstrap: vendor/autoload.php
