--- a/composer.json
+++ b/composer.json
@@ -11,24 +11,24 @@
         }
     ],
     "require": {
-        "php": ">=7.3",
+        "php": "^8.1",
         "psr/log": "~1.0",
         "doctrine/annotations": "^1.0",
         "doctrine/cache": "^1.0",
         "naucon/utility": "~1.0",
         "naucon/htmlbuilder": "~1.0",
-        "symfony/validator": "^3.2 || ^4.0 || ^5.0",
-        "symfony/property-access": "^3.2 || ^4.0 || ^5.0",
-        "symfony/security-csrf": "^3.2 || ^4.0 || ^5.0",
-        "symfony/event-dispatcher": "^3.2 || ^4.0 || ^5.0",
-        "symfony/finder": "^3.2 || ^4.0 || ^5.0",
-        "symfony/options-resolver": "^3.2 || ^4.0 || ^5.0",
-        "symfony/translation": "^3.2 || ^4.0 || ^5.0",
-        "symfony/yaml": "^3.2 || ^4.0 || ^5.0"
+        "symfony/validator": "^4.0 || ^5.0 || ^6.0",
+        "symfony/property-access": "^4.0 || ^5.0 || ^6.0",
+        "symfony/security-csrf": "^4.0 || ^5.0 || ^6.0",
+        "symfony/event-dispatcher": "^4.0 || ^5.0 || ^6.0",
+        "symfony/finder": "^4.0 || ^5.0 || ^6.0",
+        "symfony/options-resolver": "^4.0 || ^5.0 || ^6.0",
+        "symfony/translation": "^4.0 || ^5.0 || ^6.0",
+        "symfony/yaml": "^4.0 || ^5.0 || ^6.0"
     },
     "require-dev": {
-        "symfony/intl": "^3.2 || ^4.0 || ^5.0",
-        "symfony/config": "^3.2 || ^4.0 || ^5.0",
+        "symfony/intl": "^4.0 || ^5.0 || ^6.0",
+        "symfony/config": "^4.0 || ^5.0 || ^6.0",
         "naucon/iban": "~1.0",
         "phpunit/phpunit": "^9.0",
         "twig/twig" : "^2.4"
