BESTSELLER-7094 SF 6.x Update dependencies to support SF6

--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "symfony/finder": "^4.0 || ^5.0 || ^6.0",
         "symfony/options-resolver": "^4.0 || ^5.0 || ^6.0",
         "symfony/translation": "^4.0 || ^5.0 || ^6.0",
-        "symfony/yaml": "^4.0 || ^5.0 || ^6.0"
+        "symfony/yaml": "^4.0 || ^5.0 || ^6.0",
+        "symfony/cache": "^4.0 || ^5.0 || ^6.4"
     },
     "require-dev": {
         "symfony/intl": "^4.0 || ^5.0 || ^6.0",
