--- a/composer.json
+++ b/composer.json
@@ -17,19 +17,19 @@
         "doctrine/cache": "^1.0",
         "naucon/utility": "~1.0",
         "naucon/htmlbuilder": "~1.0",
-        "symfony/validator": "^4.0 || ^5.0 || ^6.0",
-        "symfony/property-access": "^4.0 || ^5.0 || ^6.0",
-        "symfony/security-csrf": "^4.0 || ^5.0 || ^6.0",
-        "symfony/event-dispatcher": "^4.0 || ^5.0 || ^6.0",
-        "symfony/finder": "^4.0 || ^5.0 || ^6.0",
-        "symfony/options-resolver": "^4.0 || ^5.0 || ^6.0",
-        "symfony/translation": "^4.0 || ^5.0 || ^6.0",
-        "symfony/yaml": "^4.0 || ^5.0 || ^6.0",
-        "symfony/cache": "^4.0 || ^5.0 || ^6.0"
+        "symfony/validator": "^6.0",
+        "symfony/property-access": "^6.0",
+        "symfony/security-csrf": "^6.0",
+        "symfony/event-dispatcher": "^6.0",
+        "symfony/finder": "^6.0",
+        "symfony/options-resolver": "^6.0",
+        "symfony/translation": "^6.0",
+        "symfony/yaml": "^6.0",
+        "symfony/cache": "^6.0"
     },
     "require-dev": {
-        "symfony/intl": "^4.0 || ^5.0 || ^6.0",
-        "symfony/config": "^4.0 || ^5.0 || ^6.0",
+        "symfony/intl": "^^6.0",
+        "symfony/config": "^6.0",
         "naucon/iban": "~1.0",
         "phpunit/phpunit": "^9.0",
         "twig/twig" : "^2.4"
