--- a/composer.json
+++ b/composer.json
@@ -11,24 +11,25 @@
         }
     ],
     "require": {
-        "php": ">=7.3",
+        "php": "^8.1",
         "psr/log": "~1.0",
         "doctrine/annotations": "^1.0",
         "doctrine/cache": "^1.0",
         "naucon/utility": "~1.0",
         "naucon/htmlbuilder": "~1.0",
-        "symfony/validator": "^3.2 || ^4.0 || ^5.0",
-        "symfony/property-access": "^3.2 || ^4.0 || ^5.0",
-        "symfony/security-csrf": "^3.2 || ^4.0 || ^5.0",
-        "symfony/event-dispatcher": "^3.2 || ^4.0 || ^5.0",
-        "symfony/finder": "^3.2 || ^4.0 || ^5.0",
-        "symfony/options-resolver": "^3.2 || ^4.0 || ^5.0",
-        "symfony/translation": "^3.2 || ^4.0 || ^5.0",
-        "symfony/yaml": "^3.2 || ^4.0 || ^5.0"
+        "symfony/validator": "^6.0",
+        "symfony/property-access": "^6.0",
+        "symfony/security-csrf": "^6.0",
+        "symfony/event-dispatcher": "^6.0",
+        "symfony/finder": "^6.0",
+        "symfony/options-resolver": "^6.0",
+        "symfony/translation": "^6.0",
+        "symfony/yaml": "^6.0",
+        "symfony/cache": "^6.0"
     },
     "require-dev": {
-        "symfony/intl": "^3.2 || ^4.0 || ^5.0",
-        "symfony/config": "^3.2 || ^4.0 || ^5.0",
+        "symfony/intl": "^6.0",
+        "symfony/config": "^6.0",
         "naucon/iban": "~1.0",
         "phpunit/phpunit": "^9.0",
         "twig/twig" : "^2.4"
